@@ -1,7 +1,11 @@
 pitrery 1.9
 ===========
 
-  * Improve the speed of the purge of archives WAL files.
+  * Do not exit without error when the server is in recovery. This is
+    not a consistent behaviour.
+
+  * Improve the speed of the purge of archives WAL files by stopping
+    the purge when the limit is reached.
 
   * Add the -T switch along with the LOG_TIMESTAMP option to prefix
     messages of backup, restore and purge with the date and time.
